rnsc/test_data/rns_integration/error/lexer/directives/dot_semicolon.rns
.method
    .;comment after semicolon
.method_end